@@ -1,7 +1,6 @@
 package ru.vzotov.accounting.interfaces.accounting.facade.impl;
 
-import org.apache.commons.lang.Validate;
-import org.springframework.beans.factory.annotation.Autowired;
+import org.apache.commons.lang3.Validate;
 import org.springframework.security.access.prepost.PostAuthorize;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.stereotype.Service;
@@ -18,21 +17,18 @@ import ru.vzotov.accounting.domain.model.BudgetRuleId;
 import ru.vzotov.accounting.domain.model.BudgetRuleType;
 import ru.vzotov.accounting.domain.model.Calculation;
 import ru.vzotov.accounting.infrastructure.security.SecurityUtils;
+import ru.vzotov.accounting.interfaces.accounting.AccountingApi;
 import ru.vzotov.accounting.interfaces.accounting.facade.BudgetFacade;
-import ru.vzotov.accounting.interfaces.accounting.facade.dto.BudgetDTO;
-import ru.vzotov.accounting.interfaces.accounting.facade.dto.BudgetNotFoundException;
-import ru.vzotov.accounting.interfaces.accounting.facade.dto.BudgetPlanDTO;
-import ru.vzotov.accounting.interfaces.accounting.facade.dto.BudgetPlanNotFoundException;
-import ru.vzotov.accounting.interfaces.accounting.facade.dto.BudgetRuleDTO;
-import ru.vzotov.accounting.interfaces.accounting.facade.dto.MoneyDTO;
-import ru.vzotov.accounting.interfaces.accounting.facade.impl.assemblers.BudgetDTOAssembler;
-import ru.vzotov.accounting.interfaces.accounting.facade.impl.assemblers.BudgetPlanDTOAssembler;
-import ru.vzotov.accounting.interfaces.accounting.facade.impl.assemblers.BudgetRuleDTOAssembler;
+import ru.vzotov.accounting.interfaces.accounting.facade.BudgetNotFoundException;
+import ru.vzotov.accounting.interfaces.accounting.facade.BudgetPlanNotFoundException;
+import ru.vzotov.accounting.interfaces.accounting.facade.impl.assemblers.BudgetAssembler;
+import ru.vzotov.accounting.interfaces.accounting.facade.impl.assemblers.BudgetPlanAssembler;
+import ru.vzotov.accounting.interfaces.accounting.facade.impl.assemblers.BudgetRuleAssembler;
+import ru.vzotov.accounting.interfaces.common.CommonApi;
 import ru.vzotov.banking.domain.model.AccountNumber;
 import ru.vzotov.banking.domain.model.BudgetCategoryId;
 import ru.vzotov.calendar.domain.model.Recurrence;
 import ru.vzotov.cashreceipt.domain.model.PurchaseCategoryId;
-import ru.vzotov.domain.model.Money;
 
 import java.time.LocalDate;
 import java.util.Currency;
@@ -43,24 +39,28 @@ import java.util.stream.Collectors;
 @Service
 public class BudgetFacadeImpl implements BudgetFacade {
 
-    @Autowired
-    private BudgetRepository budgetRepository;
+    private final BudgetRepository budgetRepository;
 
-    @Autowired
-    private BudgetPlanRepository budgetPlanRepository;
+    private final BudgetPlanRepository budgetPlanRepository;
 
-    @Override
-    @Transactional(value = "accounting-tx", readOnly = true)
-    @PreAuthorize("hasRole('ROLE_USER')")
-    public List<BudgetDTO> listBudgets() {
-        return budgetRepository.find(SecurityUtils.getCurrentPerson()).stream().map(BudgetDTOAssembler::toDTO).collect(Collectors.toList());
+    public BudgetFacadeImpl(BudgetRepository budgetRepository,
+                            BudgetPlanRepository budgetPlanRepository) {
+        this.budgetRepository = budgetRepository;
+        this.budgetPlanRepository = budgetPlanRepository;
     }
 
     @Override
     @Transactional(value = "accounting-tx", readOnly = true)
     @PreAuthorize("hasRole('ROLE_USER')")
-    public BudgetDTO getBudget(BudgetId budgetId) {
-        return BudgetDTOAssembler.toDTO(findSecurely(budgetId));
+    public List<AccountingApi.Budget> listBudgets() {
+        return budgetRepository.find(SecurityUtils.getCurrentPerson()).stream().map(BudgetAssembler::toDTO).collect(Collectors.toList());
+    }
+
+    @Override
+    @Transactional(value = "accounting-tx", readOnly = true)
+    @PreAuthorize("hasRole('ROLE_USER')")
+    public AccountingApi.Budget getBudget(BudgetId budgetId) {
+        return BudgetAssembler.toDTO(findSecurely(budgetId));
     }
 
     @PostAuthorize("hasAuthority(returnObject.owner)")
@@ -76,39 +76,39 @@ public class BudgetFacadeImpl implements BudgetFacade {
     @Override
     @Transactional(value = "accounting-tx")
     @PreAuthorize("hasRole('ROLE_USER')")
-    public BudgetDTO createBudget(BudgetId budgetId, String name, String currency, String locale) {
+    public AccountingApi.Budget createBudget(BudgetId budgetId, String name, String currency, String locale) {
         final Budget budget = new Budget(budgetId, SecurityUtils.getCurrentPerson(),
                 name, new HashSet<>(), Currency.getInstance(currency), locale);
         budgetRepository.store(budget);
-        return BudgetDTOAssembler.toDTO(budget);
+        return BudgetAssembler.toDTO(budget);
     }
 
     @Override
     @Transactional(value = "accounting-tx")
     @PreAuthorize("hasRole('ROLE_USER')")
-    public BudgetDTO modifyBudget(BudgetId budgetId, String name, String currency, String locale) throws BudgetNotFoundException {
+    public AccountingApi.Budget modifyBudget(BudgetId budgetId, String name, String currency, String locale) throws BudgetNotFoundException {
         final Budget budget = findSecurely(budgetId);
         if (budget == null) throw new BudgetNotFoundException();
         budget.setName(name);
         budget.setCurrency(Currency.getInstance(currency));
         budget.setLocale(locale);
         budgetRepository.store(budget);
-        return BudgetDTOAssembler.toDTO(budget);
+        return BudgetAssembler.toDTO(budget);
     }
 
     @Override
     @Transactional(value = "accounting-tx")
     @PreAuthorize("hasRole('ROLE_USER')")
-    public BudgetDTO deleteBudget(BudgetId budgetId) throws BudgetNotFoundException {
+    public AccountingApi.Budget deleteBudget(BudgetId budgetId) throws BudgetNotFoundException {
         final Budget budget = findSecurely(budgetId);
         if (budget == null) throw new BudgetNotFoundException();
-        return budgetRepository.delete(budgetId) ? BudgetDTOAssembler.toDTO(budget) : null;
+        return budgetRepository.delete(budgetId) ? BudgetAssembler.toDTO(budget) : null;
     }
 
     @Override
     @Transactional(value = "accounting-tx", readOnly = true)
     @PreAuthorize("hasRole('ROLE_USER')")
-    public BudgetRuleDTO getBudgetRule(BudgetId budgetId, String ruleId) throws BudgetNotFoundException {
+    public AccountingApi.BudgetRule getBudgetRule(BudgetId budgetId, String ruleId) throws BudgetNotFoundException {
         Validate.notNull(budgetId);
         Validate.notNull(ruleId);
 
@@ -117,7 +117,7 @@ public class BudgetFacadeImpl implements BudgetFacade {
 
         return budget.rules().stream()
                 .filter(r -> ruleId.equals(r.ruleId().value()))
-                .map(BudgetRuleDTOAssembler::toDTO)
+                .map(BudgetRuleAssembler::toDTO)
                 .findFirst()
                 .orElse(null);
     }
@@ -125,19 +125,19 @@ public class BudgetFacadeImpl implements BudgetFacade {
     @Override
     @Transactional(value = "accounting-tx")
     @PreAuthorize("hasRole('ROLE_USER')")
-    public BudgetDTO addRuleToBudget(BudgetId budgetId, BudgetRuleDTO rule) throws BudgetNotFoundException {
+    public AccountingApi.Budget addRuleToBudget(BudgetId budgetId, AccountingApi.BudgetRule rule) throws BudgetNotFoundException {
         final Budget budget = findSecurely(budgetId);
         if (budget == null) throw new BudgetNotFoundException();
         BudgetRule r = createRuleFromDTO(rule);
         budget.addRule(r);
         budgetRepository.store(budget);
-        return BudgetDTOAssembler.toDTO(findSecurely(budgetId));
+        return BudgetAssembler.toDTO(findSecurely(budgetId));
     }
 
     @Override
     @Transactional(value = "accounting-tx")
     @PreAuthorize("hasRole('ROLE_USER')")
-    public BudgetDTO deleteRuleFromBudget(BudgetId budgetId, String ruleId) throws BudgetNotFoundException {
+    public AccountingApi.Budget deleteRuleFromBudget(BudgetId budgetId, String ruleId) throws BudgetNotFoundException {
         Validate.notNull(budgetId);
         Validate.notNull(ruleId);
 
@@ -146,17 +146,17 @@ public class BudgetFacadeImpl implements BudgetFacade {
 
         budget.rules().stream()
                 .filter(r -> ruleId.equals(r.ruleId().value()))
-                .collect(Collectors.toList())
+                .toList()
                 .forEach(budget::deleteRule);
 
         budgetRepository.store(budget);
-        return BudgetDTOAssembler.toDTO(findSecurely(budgetId));
+        return BudgetAssembler.toDTO(findSecurely(budgetId));
     }
 
     @Override
     @Transactional(value = "accounting-tx")
     @PreAuthorize("hasRole('ROLE_USER')")
-    public BudgetDTO replaceBudgetRule(BudgetId budgetId, String ruleId, BudgetRuleDTO rule) throws BudgetNotFoundException {
+    public AccountingApi.Budget replaceBudgetRule(BudgetId budgetId, String ruleId, AccountingApi.BudgetRule rule) throws BudgetNotFoundException {
         final Budget budget = findSecurely(budgetId);
         if (budget == null) throw new BudgetNotFoundException();
 
@@ -170,38 +170,38 @@ public class BudgetFacadeImpl implements BudgetFacade {
         budget.addRule(r);
 
         budgetRepository.store(budget);
-        return BudgetDTOAssembler.toDTO(findSecurely(budgetId));
+        return BudgetAssembler.toDTO(findSecurely(budgetId));
     }
 
     @Override
     @Transactional(value = "accounting-tx", readOnly = true)
     @PreAuthorize("hasRole('ROLE_USER')")
-    public List<BudgetPlanDTO> listPlans(BudgetId budgetId) {
+    public List<AccountingApi.BudgetPlan> listPlans(BudgetId budgetId) {
         final Budget budget = findSecurely(budgetId);
         return budget.rules().stream()
-                .map(BudgetRule::ruleId)
+                .map(ru.vzotov.accounting.domain.model.BudgetRule::ruleId)
                 .flatMap(ruleId -> budgetPlanRepository.findForRule(ruleId).stream())
-                .map(BudgetPlanDTOAssembler::toDTO)
+                .map(BudgetPlanAssembler::toDTO)
                 .collect(Collectors.toList());
     }
 
     @Override
     @Transactional(value = "accounting-tx", readOnly = true)
     @PreAuthorize("hasRole('ROLE_USER')")
-    public BudgetPlanDTO getPlan(BudgetPlanId itemId) {
+    public AccountingApi.BudgetPlan getPlan(BudgetPlanId itemId) {
         Validate.notNull(itemId);
         final BudgetPlan plan = budgetPlanRepository.find(itemId);
         final Budget budget = findSecurely(plan.rule().ruleId());
         Validate.notNull(budget, "Budget not found");
-        return BudgetPlanDTOAssembler.toDTO(plan);
+        return BudgetPlanAssembler.toDTO(plan);
     }
 
     @Override
     @Transactional(value = "accounting-tx")
     @PreAuthorize("hasRole('ROLE_USER')")
-    public BudgetPlanDTO createPlan(String direction, String sourceAccount, String targetAccount,
-                                    Long categoryId, String purchaseCategoryId,
-                                    MoneyDTO value, String ruleId, LocalDate date) {
+    public AccountingApi.BudgetPlan createPlan(String direction, String sourceAccount, String targetAccount,
+                                               Long categoryId, String purchaseCategoryId,
+                                               CommonApi.Money value, String ruleId, LocalDate date) {
         Validate.notNull(ruleId);
 
         final Budget budget = findSecurely(new BudgetRuleId(ruleId));
@@ -212,22 +212,22 @@ public class BudgetFacadeImpl implements BudgetFacade {
                 budgetRepository.findRule(new BudgetRuleId(ruleId)),
                 date,
                 BudgetDirection.of(direction),
-                value == null ? null : Money.ofRaw(value.getAmount(), Currency.getInstance(value.getCurrency())),
+                value == null ? null : ru.vzotov.domain.model.Money.ofRaw(value.amount(), Currency.getInstance(value.currency())),
                 sourceAccount == null ? null : new AccountNumber(sourceAccount),
                 targetAccount == null ? null : new AccountNumber(targetAccount),
                 categoryId == null ? null : new BudgetCategoryId(categoryId),
                 purchaseCategoryId == null ? null : new PurchaseCategoryId(purchaseCategoryId)
         );
         budgetPlanRepository.store(item);
-        return BudgetPlanDTOAssembler.toDTO(item);
+        return BudgetPlanAssembler.toDTO(item);
     }
 
     @Override
     @Transactional(value = "accounting-tx")
     @PreAuthorize("hasRole('ROLE_USER')")
-    public BudgetPlanDTO modifyPlan(String itemId, String direction, String sourceAccount, String targetAccount,
-                                    Long categoryId, String purchaseCategoryId,
-                                    MoneyDTO value, String ruleId, LocalDate date) throws BudgetPlanNotFoundException {
+    public AccountingApi.BudgetPlan modifyPlan(String itemId, String direction, String sourceAccount, String targetAccount,
+                                               Long categoryId, String purchaseCategoryId,
+                                               CommonApi.Money value, String ruleId, LocalDate date) throws BudgetPlanNotFoundException {
         final Budget ruleBudget = findSecurely(new BudgetRuleId(ruleId));
         Validate.notNull(ruleBudget, "Budget for rule not found");
 
@@ -241,20 +241,20 @@ public class BudgetFacadeImpl implements BudgetFacade {
                 budgetRepository.findRule(new BudgetRuleId(ruleId)),
                 date,
                 BudgetDirection.of(direction),
-                value == null ? null : Money.ofRaw(value.getAmount(), Currency.getInstance(value.getCurrency())),
+                value == null ? null : ru.vzotov.domain.model.Money.ofRaw(value.amount(), Currency.getInstance(value.currency())),
                 sourceAccount == null ? null : new AccountNumber(sourceAccount),
                 targetAccount == null ? null : new AccountNumber(targetAccount),
                 categoryId == null ? null : new BudgetCategoryId(categoryId),
                 purchaseCategoryId == null ? null : new PurchaseCategoryId(purchaseCategoryId)
         );
         budgetPlanRepository.store(item);
-        return BudgetPlanDTOAssembler.toDTO(item);
+        return BudgetPlanAssembler.toDTO(item);
     }
 
     @Override
     @Transactional(value = "accounting-tx")
     @PreAuthorize("hasRole('ROLE_USER')")
-    public BudgetPlanDTO deletePlan(BudgetPlanId itemId) {
+    public AccountingApi.BudgetPlan deletePlan(BudgetPlanId itemId) {
         final BudgetPlan item = budgetPlanRepository.find(itemId);
         if (item == null) return null;
 
@@ -262,22 +262,22 @@ public class BudgetFacadeImpl implements BudgetFacade {
         Validate.notNull(budget, "Budget not found");
 
         budgetPlanRepository.delete(itemId);
-        return BudgetPlanDTOAssembler.toDTO(item);
+        return BudgetPlanAssembler.toDTO(item);
     }
 
-    BudgetRule createRuleFromDTO(BudgetRuleDTO rule) {
+    BudgetRule createRuleFromDTO(AccountingApi.BudgetRule rule) {
         return new BudgetRule(
-                rule.getRuleId() == null ? null : new BudgetRuleId(rule.getRuleId()),
-                BudgetRuleType.of(rule.getRuleType().charAt(0)),
-                rule.getCategoryId() == null ? null : new BudgetCategoryId(rule.getCategoryId()),
-                rule.getPurchaseCategoryId() == null ? null : new PurchaseCategoryId(rule.getPurchaseCategoryId()),
-                rule.getSourceAccount() == null ? null : new AccountNumber(rule.getSourceAccount()),
-                rule.getTargetAccount() == null ? null : new AccountNumber(rule.getTargetAccount()),
-                rule.getRecurrence() == null ? null : Recurrence.fromString(rule.getRecurrence()),
-                rule.getName(),
-                rule.getValue() == null ? null : Money.ofRaw(rule.getValue().getAmount(), Currency.getInstance(rule.getValue().getCurrency())),
-                rule.getCalculation() == null ? null : new Calculation(rule.getCalculation()),
-                rule.getEnabled() == null || rule.getEnabled()
+                rule.ruleId() == null ? null : new BudgetRuleId(rule.ruleId()),
+                BudgetRuleType.of(rule.ruleType().charAt(0)),
+                rule.categoryId() == null ? null : new BudgetCategoryId(rule.categoryId()),
+                rule.purchaseCategoryId() == null ? null : new PurchaseCategoryId(rule.purchaseCategoryId()),
+                rule.sourceAccount() == null ? null : new AccountNumber(rule.sourceAccount()),
+                rule.targetAccount() == null ? null : new AccountNumber(rule.targetAccount()),
+                rule.recurrence() == null ? null : Recurrence.fromString(rule.recurrence()),
+                rule.name(),
+                rule.value() == null ? null : ru.vzotov.domain.model.Money.ofRaw(rule.value().amount(), Currency.getInstance(rule.value().currency())),
+                rule.calculation() == null ? null : new Calculation(rule.calculation()),
+                rule.enabled() == null || rule.enabled()
         );
     }
 }
