@@ -1,6 +1,5 @@
 package ru.vzotov.accounting.interfaces.accounting.rest;
 
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.format.annotation.DateTimeFormat;
 import org.springframework.web.bind.annotation.CrossOrigin;
 import org.springframework.web.bind.annotation.DeleteMapping;
@@ -13,21 +12,17 @@ import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
+import ru.vzotov.accounting.interfaces.accounting.AccountingApi.Deal;
+import ru.vzotov.accounting.interfaces.accounting.AccountingApi.OperationRef;
+import ru.vzotov.accounting.interfaces.accounting.AccountingApi.ReceiptRef;
+import ru.vzotov.accounting.interfaces.accounting.facade.CategoryNotFoundException;
+import ru.vzotov.accounting.interfaces.accounting.facade.DealNotFoundException;
 import ru.vzotov.accounting.interfaces.accounting.facade.DealsFacade;
-import ru.vzotov.accounting.interfaces.accounting.facade.dto.CategoryNotFoundException;
-import ru.vzotov.accounting.interfaces.accounting.facade.dto.DealDTO;
-import ru.vzotov.accounting.interfaces.accounting.facade.dto.DealDTOExpansion;
-import ru.vzotov.accounting.interfaces.accounting.facade.dto.DealNotFoundException;
-import ru.vzotov.accounting.interfaces.accounting.facade.dto.OperationRef;
-import ru.vzotov.accounting.interfaces.accounting.facade.dto.ReceiptRef;
-import ru.vzotov.accounting.interfaces.accounting.rest.dto.DealsMetadataResponse;
-import ru.vzotov.accounting.interfaces.accounting.rest.dto.PatchDealsRequest;
-import ru.vzotov.accounting.interfaces.purchases.facade.dto.PurchaseRef;
+import ru.vzotov.accounting.interfaces.purchases.PurchasesApi.PurchaseRef;
 
 import java.time.LocalDate;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static java.util.Collections.emptyList;
 import static java.util.Collections.emptySet;
@@ -39,33 +34,38 @@ import static java.util.stream.Collectors.toSet;
 @CrossOrigin
 public class DealsController {
 
-    @Autowired
-    private DealsFacade dealsFacade;
+    private final DealsFacade dealsFacade;
+
+    public DealsController(DealsFacade dealsFacade) {
+        this.dealsFacade = dealsFacade;
+    }
 
     @GetMapping
-    public List<DealDTO> listDeals(@RequestParam @DateTimeFormat(iso = DateTimeFormat.ISO.DATE) LocalDate from,
-                                   @RequestParam @DateTimeFormat(iso = DateTimeFormat.ISO.DATE) LocalDate to,
-                                   @RequestParam(required = false) String query,
-                                   @RequestParam(required = false) List<String> expand) {
+    public List<Deal> listDeals(@RequestParam @DateTimeFormat(iso = DateTimeFormat.ISO.DATE) LocalDate from,
+                                @RequestParam @DateTimeFormat(iso = DateTimeFormat.ISO.DATE) LocalDate to,
+                                @RequestParam(required = false) String query,
+                                @RequestParam(required = false) List<String> expand) {
         return dealsFacade.listDeals(query, from, to,
-                expand == null ? emptySet() : expand.stream().map(DealDTOExpansion::of).collect(toSet()));
+                expand == null ? emptySet() : expand.stream().map(Deal.Expansion::of).collect(toSet()));
     }
 
     @GetMapping("metadata")
-    public DealsMetadataResponse getDealsMeta() {
+    public Deal.Meta getDealsMeta() {
         final LocalDate[] dates = dealsFacade.getMinMaxDealDates();
-        return new DealsMetadataResponse(dates[0], dates[1]);
+        return new Deal.Meta(dates[0], dates[1]);
     }
 
     @GetMapping("{dealId}")
-    public DealDTO getDeal(@PathVariable String dealId, @RequestParam(required = false) List<String> expand) throws DealNotFoundException {
-        return dealsFacade.getDeal(dealId, expand == null ? emptySet() : expand.stream().map(DealDTOExpansion::of).collect(toSet()));
+    public Deal getDeal(@PathVariable String dealId, @RequestParam(required = false) List<String> expand)
+            throws DealNotFoundException {
+        return dealsFacade.getDeal(dealId, expand == null ? emptySet() : expand.stream().map(Deal.Expansion::of).collect(toSet()));
     }
 
     @DeleteMapping("{dealId}")
-    public List<DealDTO> deleteDeal(@PathVariable String dealId,
-                                    @RequestParam(required = false, defaultValue = "false") boolean split,
-                                    @RequestParam(required=false, defaultValue = "false") boolean receipt) throws DealNotFoundException {
+    public List<Deal> deleteDeal(@PathVariable String dealId,
+                                 @RequestParam(required = false, defaultValue = "false") boolean split,
+                                 @RequestParam(required = false, defaultValue = "false") boolean receipt)
+            throws DealNotFoundException {
         if (split) {
             return dealsFacade.splitDeal(dealId);
         } else {
@@ -75,34 +75,38 @@ public class DealsController {
     }
 
     @PostMapping
-    public DealDTO createDeal(@RequestBody DealDTO deal) throws CategoryNotFoundException {
-        return dealsFacade.createDeal(deal.getDate(), deal.getAmount().getAmount(), deal.getAmount().getCurrency(),
-                deal.getDescription(), deal.getComment(), deal.getCategory(),
-                ofNullable(deal.getReceipts()).orElse(emptyList()).stream()
-                        .map(ReceiptRef::getReceiptId).collect(toSet()),
-                ofNullable(deal.getOperations()).orElse(emptyList()).stream()
-                        .map(OperationRef::getOperationId).collect(toSet()),
-                ofNullable(deal.getPurchases()).orElse(emptyList()).stream()
-                        .map(PurchaseRef::getPurchaseId).collect(Collectors.toList()));
+    public Deal createDeal(@RequestBody Deal deal) throws CategoryNotFoundException {
+        return dealsFacade.createDeal(
+                deal.date(),
+                deal.amount().amount(),
+                deal.amount().currency(),
+                deal.description(),
+                deal.comment(),
+                deal.category(),
+                ofNullable(deal.receipts()).orElse(emptyList()).stream().map(ReceiptRef::receiptId).collect(toSet()),
+                ofNullable(deal.operations()).orElse(emptyList()).stream().map(OperationRef::operationId).collect(toSet()),
+                ofNullable(deal.purchases()).orElse(emptyList()).stream().map(PurchaseRef::purchaseId).toList());
     }
 
     @PutMapping("{dealId}")
-    public void modifyDeal(@PathVariable String dealId, @RequestBody DealDTO deal
-    ) throws DealNotFoundException, CategoryNotFoundException {
-        deal.setDealId(dealId);
-        dealsFacade.modifyDeal(deal.getDealId(), deal.getDate(),
-                deal.getAmount().getAmount(), deal.getAmount().getCurrency(),
-                deal.getDescription(), deal.getComment(), deal.getCategory(),
-                ofNullable(deal.getReceipts()).orElse(emptyList()).stream()
-                        .map(ReceiptRef::getReceiptId).collect(toSet()),
-                ofNullable(deal.getOperations()).orElse(emptyList()).stream()
-                        .map(OperationRef::getOperationId).collect(toSet()),
-                ofNullable(deal.getPurchases()).orElse(emptyList()).stream()
-                        .map(PurchaseRef::getPurchaseId).collect(Collectors.toList()));
+    public void modifyDeal(@PathVariable String dealId, @RequestBody Deal deal)
+            throws DealNotFoundException, CategoryNotFoundException {
+        dealsFacade.modifyDeal(
+                dealId,
+                deal.date(),
+                deal.amount().amount(),
+                deal.amount().currency(),
+                deal.description(),
+                deal.comment(),
+                deal.category(),
+                ofNullable(deal.receipts()).orElse(emptyList()).stream().map(ReceiptRef::receiptId).collect(toSet()),
+                ofNullable(deal.operations()).orElse(emptyList()).stream().map(OperationRef::operationId).collect(toSet()),
+                ofNullable(deal.purchases()).orElse(emptyList()).stream().map(PurchaseRef::purchaseId).toList());
     }
 
     @PatchMapping
-    public DealDTO patchDeals(@RequestBody PatchDealsRequest body) {
-        return dealsFacade.mergeDeals(body.getDeals());
+    public Deal patchDeals(@RequestBody Deal.Patch body) {
+        return dealsFacade.mergeDeals(body.deals());
     }
+
 }
