@@ -1,6 +1,6 @@
 package ru.vzotov.accounting.interfaces.purchases.facade.impl;
 
-import org.apache.commons.lang.Validate;
+import org.apache.commons.lang3.Validate;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.security.access.annotation.Secured;
@@ -10,11 +10,11 @@ import ru.vzotov.accounting.domain.model.Deal;
 import ru.vzotov.accounting.domain.model.DealId;
 import ru.vzotov.accounting.domain.model.DealRepository;
 import ru.vzotov.accounting.infrastructure.security.SecurityUtils;
-import ru.vzotov.accounting.interfaces.accounting.facade.dto.DealNotFoundException;
+import ru.vzotov.accounting.interfaces.accounting.facade.DealNotFoundException;
 import ru.vzotov.accounting.interfaces.common.guards.OwnedGuard;
+import ru.vzotov.accounting.interfaces.purchases.PurchasesApi;
 import ru.vzotov.accounting.interfaces.purchases.facade.PurchasesFacade;
-import ru.vzotov.accounting.interfaces.purchases.facade.dto.PurchaseDTO;
-import ru.vzotov.accounting.interfaces.purchases.facade.impl.assembler.PurchaseDTOAssembler;
+import ru.vzotov.accounting.interfaces.purchases.facade.impl.assembler.PurchaseAssembler;
 import ru.vzotov.cashreceipt.domain.model.PurchaseCategoryId;
 import ru.vzotov.cashreceipt.domain.model.PurchaseCategoryRepository;
 import ru.vzotov.cashreceipt.domain.model.Receipt;
@@ -63,8 +63,8 @@ public class PurchaseFacadeImpl implements PurchasesFacade {
     @Override
     @Transactional(value = "accounting-tx", readOnly = true)
     @Secured({"ROLE_USER"})
-    public PurchaseDTO getPurchaseById(String purchaseId) {
-        return new PurchaseDTOAssembler().toDTO(
+    public PurchasesApi.Purchase getPurchaseById(String purchaseId) {
+        return new PurchaseAssembler().toDTO(
                 ownedGuard.accessing(purchaseRepository.find(new PurchaseId(purchaseId)))
         );
     }
@@ -86,46 +86,46 @@ public class PurchaseFacadeImpl implements PurchasesFacade {
     @Override
     @Transactional(value = "accounting-tx", readOnly = true)
     @Secured({"ROLE_USER"})
-    public List<PurchaseDTO> findPurchases(LocalDateTime from, LocalDateTime to) {
-        return new PurchaseDTOAssembler().toDTOList(purchaseRepository.findByDate(SecurityUtils.getAuthorizedPersons(), from, to));
+    public List<PurchasesApi.Purchase> findPurchases(LocalDateTime from, LocalDateTime to) {
+        return new PurchaseAssembler().toDTOList(purchaseRepository.findByDate(SecurityUtils.getAuthorizedPersons(), from, to));
     }
 
     @Override
     @Transactional(value = "accounting-tx")
     @Secured({"ROLE_USER"})
-    public void modifyPurchase(PurchaseDTO purchase) {
+    public void modifyPurchase(PurchasesApi.Purchase purchase) {
         Validate.notNull(purchase);
-        Validate.notNull(purchase.getPurchaseId());
+        Validate.notNull(purchase.purchaseId());
 
-        Purchase p = ownedGuard.accessing(purchaseRepository.find(new PurchaseId(purchase.getPurchaseId())));
+        Purchase p = ownedGuard.accessing(purchaseRepository.find(new PurchaseId(purchase.purchaseId())));
         Validate.notNull(p);
 
-        if (purchase.getName() != null) {
-            p.setName(purchase.getName());
+        if (purchase.name() != null) {
+            p.setName(purchase.name());
         }
 
-        if (purchase.getDateTime() != null) {
-            p.setDateTime(purchase.getDateTime());
+        if (purchase.dateTime() != null) {
+            p.setDateTime(purchase.dateTime());
         }
 
-        if (purchase.getPrice() != null) {
-            Money price = Money.ofRaw(purchase.getPrice().getAmount(), Currency.getInstance(purchase.getPrice().getCurrency()));
+        if (purchase.price() != null) {
+            Money price = Money.ofRaw(purchase.price().amount(), Currency.getInstance(purchase.price().currency()));
             p.setPrice(price);
         }
 
-        if (purchase.getQuantity() != null) {
-            p.setQuantity(BigDecimal.valueOf(purchase.getQuantity()));
+        if (purchase.quantity() != null) {
+            p.setQuantity(BigDecimal.valueOf(purchase.quantity()));
         }
 
-        if (purchase.getCategoryId() != null) {
-            p.assignCategory(categoryRepository.findById(new PurchaseCategoryId(purchase.getCategoryId())));
+        if (purchase.categoryId() != null) {
+            p.assignCategory(categoryRepository.findById(new PurchaseCategoryId(purchase.categoryId())));
         }
     }
 
     @Override
     @Transactional(value = "accounting-tx")
     @Secured({"ROLE_USER"})
-    public List<PurchaseId> createPurchase(Collection<PurchaseDTO> purchases, DealId dealId) {
+    public List<PurchaseId> createPurchase(Collection<PurchasesApi.Purchase> purchases, DealId dealId) {
         Validate.notEmpty(purchases);
         Validate.notNull(dealId);
 
@@ -136,28 +136,28 @@ public class PurchaseFacadeImpl implements PurchasesFacade {
         final List<Purchase> entities = purchases.stream()
                 .map(dto -> {
                     final Purchase p;
-                    if (dto.getPurchaseId() != null) {
+                    if (dto.purchaseId() != null) {
                         throw new IllegalArgumentException("It is not allowed to modify purchase here");
                     } else {
-                        Money price = Money.ofRaw(dto.getPrice().getAmount(), Currency.getInstance(dto.getPrice().getCurrency()));
-                        p = new Purchase(PurchaseId.nextId(), SecurityUtils.getCurrentPerson(), dto.getName(), dto.getDateTime(), price, BigDecimal.valueOf(dto.getQuantity()));
+                        Money price = Money.ofRaw(dto.price().amount(), Currency.getInstance(dto.price().currency()));
+                        p = new Purchase(PurchaseId.nextId(), SecurityUtils.getCurrentPerson(), dto.name(), dto.dateTime(), price, BigDecimal.valueOf(dto.quantity()));
                     }
 
-                    if (dto.getReceiptId() != null) {
-                        p.assignReceipt(new ReceiptId(dto.getReceiptId()));
+                    if (dto.receiptId() != null) {
+                        p.assignReceipt(new ReceiptId(dto.receiptId()));
                     }
-                    if (dto.getCategoryId() != null) {
-                        p.assignCategory(ownedGuard.accessing(categoryRepository.findById(new PurchaseCategoryId(dto.getCategoryId()))));
+                    if (dto.categoryId() != null) {
+                        p.assignCategory(ownedGuard.accessing(categoryRepository.findById(new PurchaseCategoryId(dto.categoryId()))));
                     }
                     return p;
                 })
-                .collect(Collectors.toList());
+                .toList();
 
         final List<PurchaseId> result = entities.stream().peek(p -> {
                     purchaseRepository.store(p);
                     deal.addPurchase(p.purchaseId());
                 })
-                .map(Purchase::purchaseId)
+                .map(ru.vzotov.purchase.domain.model.Purchase::purchaseId)
                 .collect(Collectors.toList());
 
         dealRepository.store(deal);
@@ -168,14 +168,14 @@ public class PurchaseFacadeImpl implements PurchasesFacade {
     @Override
     @Transactional(value = "accounting-tx")
     @Secured({"ROLE_USER"})
-    public List<PurchaseDTO> createPurchasesFromReceipt(String receiptId) {
+    public List<PurchasesApi.Purchase> createPurchasesFromReceipt(String receiptId) {
         Validate.notNull(receiptId);
         final ReceiptId rid = new ReceiptId(receiptId);
         final Receipt receipt = ownedGuard.accessing(receiptRepository.find(rid));
 
         final Deal deal = ownedGuard.accessing(dealRepository.findByReceipt(rid));
-        final PurchaseDTOAssembler assembler = new PurchaseDTOAssembler();
-        final List<PurchaseDTO> result = receipt.products().items().stream()
+        final PurchaseAssembler assembler = new PurchaseAssembler();
+        final List<PurchasesApi.Purchase> result = receipt.products().items().stream()
                 .map(i -> {
                     final PurchaseId pid = PurchaseId.nextId();
                     final Purchase p = new Purchase(pid, deal.owner(), i.name(), receipt.dateTime(), i.price(), BigDecimal.valueOf(i.quantity()));
@@ -192,16 +192,16 @@ public class PurchaseFacadeImpl implements PurchasesFacade {
     @Override
     @Transactional(value = "accounting-tx")
     @Secured({"ROLE_USER"})
-    public List<PurchaseDTO> createPurchasesFromDealReceipts(String dealId) throws DealNotFoundException {
+    public List<PurchasesApi.Purchase> createPurchasesFromDealReceipts(String dealId) throws DealNotFoundException {
         Validate.notNull(dealId);
         final Deal deal = ownedGuard.accessing(dealRepository.find(new DealId(dealId)));
         if (deal == null) {
             throw new DealNotFoundException(String.format("Deal with ID=%s not found", dealId));
         }
 
-        final PurchaseDTOAssembler assembler = new PurchaseDTOAssembler();
+        final PurchaseAssembler assembler = new PurchaseAssembler();
 
-        final List<PurchaseDTO> result = deal.receipts().stream()
+        final List<PurchasesApi.Purchase> result = deal.receipts().stream()
                 .map(receiptRepository::find)
                 .filter(Objects::nonNull)
                 .flatMap(receipt -> ownedGuard.accessing(receipt).products().items().stream().map(i -> {
